--- a/index.css
+++ b/index.css
@@ -1,21 +1,28 @@
 .gridBox{
     display: grid;
     grid-template-columns: 80% 20%;
-    grid-template-rows: 90% 10%;
-    height:100%;
+    grid-template-rows: 5% 85% 10%;
+    height:95%;
     width:90%;
+}
+
+.right_head{
+    grid-column: 2;
+    grid-row: 1;
+    width:100%;
+    height:100%;
 }
 
 .left_top{
     grid-column: 1;
-    grid-row: 1;
+    grid-row: 2;
     width:100%;
     height:100%;
 }
 
 .left_bottom{
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 3;
     width:100%;
     height:100%;
     margin-top: 10px;
@@ -23,7 +30,7 @@
 
 .right{
     grid-column: 2;
-    grid-row: 1 / span 2;
+    grid-row: 2 / span 2;
     border: 1px solid black;
     width:100%;
     height:100%;
@@ -33,6 +40,12 @@
 #chat{
     width:100%;
     height:100%;
+}
+
+#login_button{
+    width: 50px;
+    height: 90%;
+    margin-left: 80%;
 }
 
 #textInput{
